--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ https://templatemo.com/tm-592-glossy-touch
 -->
   <style>
     body {
-        background-image: url('C:/iearn/handsome-giga-chad-hmsvijj0ji4dhedr.png');
+        background-image: url('handsome-giga-chad-hmsvijj0ji4dhedr.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -33,7 +33,7 @@ https://templatemo.com/tm-592-glossy-touch
         <div class="content-wrapper">
           <section class="hero glass">
             <div class="hero-image">
-              <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\1200x1200bf-60.jpg" alt="" />
+              <img src="1200x1200bf-60.jpg" alt="" />
             </div>
             <div class="hero-content">
               <h1></h1>
@@ -55,7 +55,7 @@ https://templatemo.com/tm-592-glossy-touch
           <section class="features">
             <div class="feature-card glass">
               <div class="feature-icon">
-                <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\afd958070b32f713d4a3ba087f08a87d (1).webp" alt="나무위키">
+                <img src="afd958070b32f713d4a3ba087f08a87d (1).webp" alt="나무위키">
               </div>
               <h3><a href="https://namu.wiki/" target="_blank">나무위키</a></h3>
               <p>
@@ -65,7 +65,7 @@ https://templatemo.com/tm-592-glossy-touch
 
             <div class="feature-card glass">
               <div class="feature-icon">
-                <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\스크린샷 2025-11-18 080017.png" alt="유튜브">
+                <img src="스크린샷 2025-11-18 080017.png" alt="유튜브">
               </div>
               <h3><a href="https://www.youtube.com/" target="_blank">유튜브</a></h3>
               <p>
@@ -75,7 +75,7 @@ https://templatemo.com/tm-592-glossy-touch
 
             <div class="feature-card glass">
               <div class="feature-icon">
-                <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\png-transparent-google-logo-google-text-trademark-logo (1).png" alt="구글">
+                <img src="png-transparent-google-logo-google-text-trademark-logo (1).png" alt="구글">
               </div>
               <h3><a href="https://www.google.com/" target="_blank">구글</a></h3>
               <p>
@@ -85,7 +85,7 @@ https://templatemo.com/tm-592-glossy-touch
 
             <div class="feature-card glass">
               <div class="feature-icon">
-                <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\img_sticker (1).png" alt="스쿼드 메이커">
+                <img src="img_sticker (1).png" alt="스쿼드 메이커">
               </div>
               <h3><a href="https://fconline.nexon.com/datacenter/squadmaker" target="_blank">스쿼드 메이커</a></h3>
               <p>
@@ -95,7 +95,7 @@ https://templatemo.com/tm-592-glossy-touch
 
             <div class="feature-card glass">
               <div class="feature-icon">
-                <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\gemini_aurora_thumbnail_4g_e74822ff0ca4259beb718 (1).png" alt="gemini">
+                <img src="png-transparent-google-logo-google-text-trademark-logo (1).png" alt="gemini">
               </div>
               <h3><a href="https://gemini.google.com/" target="_blank">gemini</a></h3>
               <p>
@@ -105,7 +105,7 @@ https://templatemo.com/tm-592-glossy-touch
 
             <div class="feature-card glass">
               <div class="feature-icon">
-                <img src="C:\Users\User\Desktop\templatemo_592_glossy_touch\images\6d0fc6a5-2ccd-49e5-8ba0-f890a5e938b7 (1).jpg" alt="dbpia">
+                <img src="6d0fc6a5-2ccd-49e5-8ba0-f890a5e938b7 (1).jpg" alt="dbpia">
               </div>
               <h3><a href="https://www.dbpia.co.kr/" target="_blank">dbpia</a></h3>
               <p>
@@ -125,3 +125,4 @@ https://templatemo.com/tm-592-glossy-touch
 
   </body>
 </html>
+
