--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://templatemo.com/tm-592-glossy-touch
         <div class="content-wrapper">
           <section class="hero glass">
             <div class="hero-image">
-              <img src="1200x1200bf-60.jpg" alt="" />
+              <img src="https://github.com/winter6210/website-2/blob/main/1200x1200bf-60.jpg" alt="" />
             </div>
             <div class="hero-content">
               <h1></h1>
@@ -125,4 +125,5 @@ https://templatemo.com/tm-592-glossy-touch
 
   </body>
 </html>
+
 
